fix map resizing on mobile Safari address bar expand

--- a/src/components/BikehopperMap.css
+++ b/src/components/BikehopperMap.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   bottom: 0;
-  height: auto;
+  height: 100vh;
   width: 100%;
   z-index: 1;
 }
